syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

// The request message containing the user's ID, page number, and page size.
message SuggestUsersToFollowRequest {
  int32 page_number = 1;
  int32 page_size = 2;
}

// The response message containing the suggested users.
message SuggestedUsers {
  string id = 1;
  string username = 2;
  string image_url = 3;
  string first_name = 4;
  string last_name = 5;
  bool is_verified = 6;
  int64 following_count = 7;
  int64 follower_count = 8;
}

message SuggestUsersToFollowResponse {
  repeated SuggestedUsers users = 1;
  bool has_more = 2; // Indicates whether there are more pages
}
